# rpi-zero-voice-assistant

./: README.md  main.py  pyproject.toml
