[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"tflite-runtime",
	"librosa",
	"EfficientWord-Net@git+https://github.com/BojanSof/EfficientWord-Net",
	"elevenlabs",
	"numpy==1.24.2",
]
